# AltabRust

./: Cargo.toml  README.md
src/: GraphApp.glade  GraphApp.glade~  altab.rs  main.glade  main.glade~  main.rs  os.rs
src/Altab/: Altab.rs
src/altab/: crawler.rs  deposit.rs  entries.rs  persistence.rs  result_list.rs  spell_checker.rs
src/altab/entries/: entry.rs  shortcut_entry.rs
src/os/: windows_api.rs
