[package]
name = "rusto_trainuru"
version = "0.1.0"
authors = ["Agustín Marsero <amarsero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.63", features = ["derive"] }
serde_derive = "1.0.102"
erased-serde = "0.3.9"
bincode = "1"
dirs = "2.0"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
features = ["v3_16"]