[package]
name = "altabrust"
version = "0.1.0"
authors = ["Agustín Marsero <amarsero@gmail.com>"]
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive","rc"] }
serde_derive = "1.0.130"
erased-serde = "0.3.16"
bincode = "1.3.3"
dirs = "4.0.0"
parselnk = "0.1.0"
hotkey = "0.3.1"
eframe = "0.19.0"
egui = "0.19.0"
